--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    font-family: monospace;
+    font-size: 30px;
+    background-color: black;
+}
+h2,ol{
+    color: white;
+    text-align: center;
+}
+body{
+    padding: 100px;
+}
+input
+{
+    width: 100%;
+    font-size: 1.3rem;
+    color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+    color: white;
+}
+.card-grid{
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+    width: auto;
+}
+
+.card {
+    align-content:center;
+    border: 0px solid rgb(24, 24, 24);
+    border-radius: 15px;
+    margin: auto;
+    overflow: hidden;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.card p {
+    padding: 50px;
+    text-align: center;
+}
+
+.card img {
+    max-height: 100%;
+}
+
+
+.tittle {
+    margin: auto;
+    padding: auto;
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+
+h3{
+    font-size: 30px;
+    margin: auto;
+    padding: auto;
+    font-size: 40px;
 }
