--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,9 @@
 *{
     font-family: monospace;
     font-size: 30px;
-    background-color: black;
-}
-h2,ol{
-    color: white;
-    text-align: center;
-}
-body{
-    padding: 100px;
-}
-input
-{
-    width: 100%;
-    font-size: 1.3rem;
-    color: white;
+    background-color: rgb(243, 243, 243);
 }
 
-h1{
-    color: white;
-}
 .card-grid{
     display: flex;
     flex-direction:row;
@@ -59,6 +43,50 @@ h1{
 h3{
     font-size: 30px;
     margin: auto;
-    padding: auto;
+    padding: 5%;
     font-size: 40px;
+    text-align: center;
+    color: #17183B;
+    
+
 }
+
+p{
+    font-size: 30px;
+    margin: auto;
+    padding: 5%;
+    font-size: 40px;
+    text-align: center;
+}
+
+.tittle{
+    background-color: #FF4F79;
+    padding: 2%;
+    margin: auto;
+    text-align: left;
+    color: #ffffff;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+input
+{
+    text-align: center;
+    width: 100%;
+    font-size: 1.3rem;
+    color: #181818;
+    background-color: white;
+    border: none;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+
+
+
