--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,32 @@ input
     -o-border-radius: 10px;
 }
 
+/* MediaQuery */
 
+@media (max-width: 947px){
+ .div card-grid{
+        display: flex;
+        flex-direction:row;
+        flex-wrap: wrap;
+        width: 50%;
+        border-radius: 20px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+}
+}
 
-
+@media (max-width: 690px) {
+    .div card-grid{
+        display: flex;
+        flex-direction:row;
+        flex-wrap: wrap;
+        width: 30%;
+        border-radius: 40px;
+        -webkit-border-radius: 40px;
+        -moz-border-radius: 40px;
+        -ms-border-radius: 40px;
+        -o-border-radius: 40px;
+}
+}
