Alineacion de items para mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ h3 {
     padding: auto;
     text-align: center;
     color: #2d2d35;
+    padding: 1%;
 }
 
 p {
@@ -122,6 +123,12 @@ input {
         flex-wrap: wrap;
         margin-right: 25px;
         width: auto;
+    }
+
+    h3{
+        text-align: center;
+        margin-right: 25px;
+        
     }
 
 }
